objects/ASI_MFM_Event_PP__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Amount_Allocated_to_Plan__c</fullName>
        <label>Amount Allocated from Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_Owner__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Budget_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event_Name_Search__c</fullName>
        <label>Event Name (Search)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Event__c</fullName>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Event PP</relationshipLabel>
        <relationshipName>Event_PP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Amount__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Plan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Category__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_PP_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Name_Search__c</fullName>
        <label>Plan Name (Search)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Name__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Event PP</relationshipLabel>
        <relationshipName>Event_PP</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Event PP</label>
    <nameField>
        <label>Event PP ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event PP</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Event_PP</fullName>
        <active>true</active>
        <label>CN Event PP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>